--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
-    
+ *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+ }   
+ body{
+    font-family: 'Poppins', sans-serif;
+    line-height:1.6;
+    color: #333;
+ }
+
+ nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background:#555;
+    padding: 10px 20px; 
+ }
+ nav a{
+    color: #fff;
+    text-decoration: none;
+    margin: 10px;
+ }
+ .nav-right a:hover{
+    color: #f0a500;
+ }
+ 
